kubernetes/apps/network/reverse-proxy/homeassistant/endpoint.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: homeassistant
  labels:
    kubernetes.io/service-name: homeassistant
addressType: IPv4
endpoints:
  - addresses:
      - "192.168.2.2"
ports:
  - name: http
    port: 8123
    protocol: TCP
