kubernetes/apps/network/reverse-proxy/homeassistant/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
subsets:
  - addresses:
      - ip: 192.168.2.2
    ports:
      - port: 8123
