kubernetes/apps/network/reverse-proxy/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
